hphp/test/zend/good/ext/standard/tests/array/krsort_variation5.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
  die("skip Output tested contains chars that are not shown the same on windows concole (ESC and co)");
}