hphp/test/zend/bad/ext/standard/tests/file/disk_total_space_error-win32.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != 'WIN' )
  die("skip Valid only for Windows");
?>